商品ページcss

--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -4219,6 +4219,9 @@ th{
 
 
 
+
+
+
 /* productページcss */
 .product .sec03 {
   border-bottom: 1px solid #d9d6d6;
@@ -4385,6 +4388,7 @@ th{
   -webkit-box-align: stretch;
       -ms-flex-align: stretch;
           align-items: stretch;
+  display: flex;
 }
 
 @media (min-width: 1920px) {
