商品ページcss

--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -4223,6 +4223,69 @@ th{
 
 
 /* productページcss */
+
+.sec03 .popular_product {
+  text-align-last: left;
+  padding: 0 80px;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.sec03 .popular_product .img {
+  width: 30vw;
+  background-image: url(../../img/211220_cacao30562_480x480.jpeg);
+  background-size: auto;
+}
+
+.sec03 .popular_product .product__detail {
+  width: 30vw;
+  margin-left: 80px;
+}
+
+.sec03 .popular_product .product__detail h2 {
+  margin-bottom: 0;
+}
+
+.sec03 .popular_product .product__detail .price {
+  margin-top: 15px;
+}
+
+.sec03 .popular_product .product__detail__text {
+  border-top: #d9d6d6 solid 1px;
+  margin-top: 15px;
+  padding-top: 70px;
+}
+
+.sec03 .popular_product .product__detail__text p {
+  line-height: 1.7em;
+  margin-bottom: 24px;
+}
+
+
+.sec03 .popular_product .product__detail__text a {
+  margin-bottom: 24px;
+  display: block;
+  text-decoration: underline;
+}
+
+@media(max-width: 1025px){
+  .sec03 .popular_product .product__detail__text p{
+    line-height: 1.3em;
+    margin-bottom: 20px;
+  }
+
+  .product__detail__main{
+    font-size: 24px;
+  }
+
+  
+}
+
+
 .product .sec03 {
   border-bottom: 1px solid #d9d6d6;
 }
