--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -4445,6 +4445,190 @@ th{
   
 }
 
+.sec03 .popular_product {
+  text-align-last: left;
+  padding: 0 80px;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.sec03 .popular_product .img {
+  width: 30vw;
+  background-image: url(../../img/211220_cacao30562_480x480.jpeg);
+  background-size: auto;
+}
+
+.sec03 .popular_product .product__detail {
+  width: 30vw;
+  margin-left: 80px;
+}
+
+.sec03 .popular_product .product__detail h2 {
+  margin-bottom: 0;
+}
+
+.sec03 .popular_product .product__detail .price {
+  margin-top: 15px;
+}
+
+.sec03 .popular_product .product__detail__text {
+  border-top: #d9d6d6 solid 1px;
+  margin-top: 15px;
+  padding-top: 70px;
+}
+
+.sec03 .popular_product .product__detail__text p {
+  line-height: 1.7em;
+  margin-bottom: 24px;
+}
+
+
+.sec03 .popular_product .product__detail__text a {
+  margin-bottom: 24px;
+  display: block;
+  text-decoration: underline;
+}
+
+@media(max-width: 1025px){
+  .sec03 .popular_product .product__detail__text p{
+    line-height: 1.3em;
+    margin-bottom: 20px;
+  }
+
+  .product__detail__main{
+    font-size: 24px;
+  }
+
+  
+}
+
+
+.counter {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  white-space: nowrap;
+  line-height: 3em;
+}
+
+.counter .counter__submit{
+  text-align-last: center;
+}
+.counter input{
+  color: #000;
+  width: 100%;
+  padding: 5px;
+  margin-left: 10px;
+}
+
+.counter .fas {
+  padding: 10px 20px;
+}
+
+.sec03 .popular_product .product__detail .Btn02 {
+  width: 100%;
+}
+
+.sec03 .popular_product .product__detail .link__detail {
+  margin-top: 36px;
+  display: block;
+  text-decoration: underline;
+}
+
+@media (min-width: 1920px) {
+  .sec03 .popular_product .product__detail__text p, .sec03 .popular_product .product__detail__text a {
+    font-size: 22px;
+  }
+  .sec03 .popular_product .product__detail .price {
+    font-size: 1vw;
+  }
+  .sec03 .popular_product .product__detail .counter {
+    width: 35%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    font-size: 22px;
+  }
+  .sec03 .popular_product .product__detail .link__detail {
+    font-size: 22px;
+  }
+}
+
+@media (max-width: 1320px) {
+  .sec03 .popular_product .product__detail {
+    width: 400px;
+  }
+  .sec03 .popular_product .img {
+    width: 400px;
+  }
+}
+
+@media (max-width: 1025px) {
+  .sec03 .popular_product {
+    padding: 0 40px;
+  }
+  .sec03 .popular_product .product__detail {
+    width: 50%;
+    margin-left: 40px;
+  }
+  .sec03 .popular_product .img {
+    width: 50%;
+  }
+}
+
+@media (max-width: 768px) {
+  .sec03 .popular_product {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .sec03 .popular_product .product__detail {
+    width: 100%;
+    margin-left: 0;
+  }
+  .sec03 .popular_product .product__detail h2 {
+    font-size: 20px;
+  }
+  .sec03 .popular_product .product__detail .price {
+    font-size: 18px;
+
+  }
+  .sec03 .popular_product .product__detail__main {
+    margin-top: 30px;
+
+  }
+  .sec03 .popular_product .product__detail .Btn02 {
+    width: 100%;
+    text-align-last: center;
+    margin-top: 30px;
+  }
+
+  
+  .sec03 .popular_product .img {
+    width: 100%;
+  }
+}
+
+@media (max-width: 500px) {
+  .sec03 .popular_product {
+    padding: 0 20px;
+  }
+  .sec03 .popular_product .product__detail__text p{
+    font-size: 14px;
+  }
+}
+
 
 
 .product .sec03 .maison {
