ボタンの文字中央寄せ

--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -3892,6 +3892,7 @@ th{
   margin: 0 auto;
   width: 350px;
   text-align: center;
+  text-align-last: center;
   margin-top: 20px;
   position: relative;
   overflow: hidden;
