ボタンの文字中央寄せ

--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -4524,6 +4524,8 @@ th{
   width: 100%;
   padding: 5px;
   margin-left: 10px;
+  text-align: center;
+  text-align-last: center;
 }
 
 .counter .fas {
