--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -3883,7 +3883,7 @@ th{
 
 .Btn02 {
   color: #fff;
-  background: #b7282e;
+  background: #8D232F;
   font-size: 1.1vw;
   padding: 14px 0;
   -webkit-box-sizing: border-box;
@@ -3937,11 +3937,11 @@ th{
 }
 .Btn02:hover span,
 .Btn02:hover input {
-  color: #b7282e;
+  color: #8D232F;
 }
 
 .Btn02:hover input{
-  color: #b7282e;
+  color: #8D232F;
   z-index: 3;
 }
 
@@ -3967,7 +3967,7 @@ th{
           transform: scale(0, 1);
   -webkit-transform-origin: right top;
           transform-origin: right top;
-  border: 1px solid #b7282e;
+  border: 1px solid #8D232F;
 }
 
 .bgleft:before {
@@ -3978,7 +3978,7 @@ th{
   left: 0;
   z-index: 2;
   /*色や形状*/
-  background: #b7282e;
+  background: #8D232F;
   /*背景色*/
   width: 100%;
   height: 100%;
