--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -3991,7 +3991,7 @@ th{
           transform: scale(0, 1);
   -webkit-transform-origin: right top;
           transform-origin: right top;
-  border: 1px solid #b7282e;
+  border: 1px solid #8D232F;
 }
 
 /*hoverした際の形状*/
@@ -4100,7 +4100,7 @@ th{
   width: 100%;
   margin: 0 auto;
   margin-top: 7vw;
-  background: #b7282e;
+  background: #8D232F;
   color: white;
   padding: 10px !important;
   border-radius: 2px;
