--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -90,32 +90,17 @@
                     </h1>
                 </div>
             </section>
+           
+
             <nav class="globalNav">
                 <ul class="menu">
-                    <li class="menu__item">
-                        <a href="course-info.html">ゴルフ</a>
-                    </li>
-                    <li class="menu__item">
-                        <a href="guidance.html">食事</a>
-                    </li>
-                    <li class="menu__item">
-                        <a href="facilities.html">宿泊</a>
-                    </li>
-                    <li class="menu__item">
-                        <a href="event-info.html">イベント</a>
-                    </li>
-                    <li class="menu__item menu__item--s">
-                        <a href="news.html">津カントリー倶楽部について </a>
-                    </li>
-                    <li class="menu__item">
-                        <a href="reserve-price.html">アクセス </a>
-                    </li>
-                    <li class="menu__item--box">
-                        <a href="">ご予約 / 料金 </a>
-                    </li>
+                {% for link in linklists.main-menu.lunks %}
+                     <li class="menu__item">
+                        <a href="{{ link.url }}">{{link.title}}</a>
+                     </li>
+                {% endfor %}
                 </ul>
             </nav>
-
         </header>
 
         {% else %}
