ボタンの文字中央寄せ

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -94,7 +94,7 @@
 
             <nav class="globalNav">
                 <ul class="menu">
-                {% for link in linklists.main-menu.lunks %}
+                {% for link in linklists.main-menu.links %}
                      <li class="menu__item">
                         <a href="{{ link.url }}">{{link.title}}</a>
                      </li>
