ボタンの文字中央寄せ

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -99,6 +99,9 @@
                         <a href="{{ link.url }}">{{link.title}}</a>
                      </li>
                 {% endfor %}
+                    <li class="menu__item--box">
+                        <a href="">ご予約 / 料金 </a>
+                    </li>
                 </ul>
             </nav>
         </header>
