ボタンの文字中央寄せ

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -180,19 +180,14 @@
                         alt="津カントリー倶楽部"
                     />
                 </p>
+               
+
                 <ul class="menu">
-                    <li class="menu__item">
-                        <a href="#">宿泊</a>
-                    </li>
-                    <li class="menu__item">
-                        <a href="#">イベント</a>
-                    </li>
-                    <li class="menu__item menu__item--s">
-                        <a href="">津カントリー倶楽部について </a>
-                    </li>
-                    <li class="menu__item">
-                        <a href="">アクセス </a>
-                    </li>
+                {% for link in linklists.main-menu.links %}
+                     <li class="menu__item">
+                        <a href="{{ link.url }}">{{link.title}}</a>
+                     </li>
+                {% endfor %}
                 </ul>
             </nav>
         </header>
