ポリシーなど、フッターメニューページの追加

--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -4816,4 +4816,98 @@ th{
   }
 }
 
+
+
+
+
+
+
+/* セクションコンテンツ */
+.section_container {
+  width: 90vw;
+  margin: 16vw 5vw 10vw 5vw;
+}
+
+@media(max-width: 400px){
+  .section_container{
+    margin-top: 100px;
+  }
+}
+
+.section_inner {
+  width: 75%;
+  margin: 0 auto;
+}
+
+.section_title {
+  text-align: center;
+  font-size: 20px;
+  margin-bottom: 4vw;
+  letter-spacing: 4px;
+}
+
+.section_subtitle {
+  font-size: 1.2vw;
+  margin-bottom: 2vw;
+  font-weight: 900;
+  font-family: serif;
+  letter-spacing: 2px;
+}
+
+.section_text {
+  line-height: 2.2vw;
+  font-size: 1.0vw;
+  margin-bottom: 2vw;
+  letter-spacing: 1.0px;
+}
+
+.bold {
+  font-weight: bolder;
+}
+
+.section_link {
+  text-decoration: underline;
+  color: #3d3a39;
+}
+
+.section_link:hover {
+  text-decoration: underline;
+  color: #3d3a39;
+  opacity: 0.7;
+}
+
+@media(max-width:1023px) {
+  .section_title {
+    text-align: center;
+    font-size: clamp(18px, 3vw, 3vw) !important;
+    margin-bottom: 4vw;
+    letter-spacing: 4px;
+  }
+
+  .section_subtitle {
+      font-size: clamp(13px, 2.9vw, 2.9vw);
+      margin-bottom: 7vw;
+      font-weight: 900;
+      font-family: serif;
+
+  }
+
+  .section_text {
+      line-height: 2em;
+      line-height: 2em;
+      font-size: clamp(13px, 1.5vw, 2.9vw);
+      margin-bottom: 2vw;
+  }
+
+}
+
+@media(max-width: 500px) {
+  .section_inner{
+    width: 95%;
+  }
+}
+
+
+/* section【特商法 プラポリここまで】 */
+
 /*# sourceMappingURL=main.css.map */
