--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -4914,7 +4914,160 @@ th{
 
 
 
+/* 問い合わせのスタイル */
+.contact-form{
+  width: 90%;
+  margin: 0 auto;
+  margin-top: 150px !important;
+  max-width: 1350px;
 
+}
+
+.contact-form p{
+  color: #fff;
+}
+
+.contact-form input,
+.contact-form textarea,
+.contact-form .mailform,
+.contact-form .name_form{
+  color: #000;
+}
+
+
+
+
+input {
+  background-color: #fff;
+  border: none;
+  height: 40px;
+  width: 100%;
+  border-radius: 1px;
+}
+
+
+
+
+textarea {
+  background-color: #fff;
+  border: none;
+  width: 100%;
+
+}
+
+.mail_form,
+.name_form {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+
+}
+
+@media(max-width: 560px){
+  .mail_form,
+.name_form {
+  flex-direction: column;
+}
+
+}
+
+
+.mail_form input,
+.name_form input {
+  width: 100%;
+}
+
+.form-group {
+  width: 100%;
+  margin: 7px 0;
+}
+
+.form-group p {
+  font-size: 13px;
+  letter-spacing: 2px;
+  font-weight: bold;
+  padding: 8px;
+}
+
+
+.mail_form .form-group,
+.name_form .form-group {
+  width: 49%;
+}
+
+@media(max-width: 560px){
+  .mail_form .form-group,
+  .name_form .form-group{
+    width: 100%;
+  }
+}
+
+
+
+.btn-submit {
+  width: 20%;
+  height: 60px;
+  border: 1px solid black;
+  background-color: #b7282e;
+  margin-top: 4.5vw;
+  color: #fff !important;
+  text-align: center;
+  display: block;
+  margin: 40px auto 0 auto;
+  transition: .3s;
+}
+.btn-submit:hover{
+  opacity: .7;
+}
+
+@media(max-width: 768px){
+  .btn-submit{
+    width: 80%;
+  }
+}
+
+
+#c-red {
+  color: #e57373;
+}
+
+.contact_text {
+  font-size: 12px;
+  letter-spacing: 2px;
+}
+
+
+
+
+.thanks_section{
+  letter-spacing: 1px;
+}
+
+
+.thanks_section .font01{
+  font-size: 26px;
+}
+
+.thanks_comp{
+  font-size: 12px;
+}
+
+.thanks_bottom{
+  margin-top:80px;
+  font-size: 13px !important;
+}
+
+.under_space{
+  margin-bottom:20px;
+}
+
+.center{
+  text-align:center;
+}
+
+
+/* 問い合わせここまで */
 
 
 /*# sourceMappingURL=main.css.map */
