--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -5009,7 +5009,7 @@ textarea {
   width: 20%;
   height: 60px;
   border: 1px solid black;
-  background-color: #b7282e;
+  background-color: #8D232F;
   margin-top: 4.5vw;
   color: #fff !important;
   text-align: center;
