--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -5008,7 +5008,7 @@ textarea {
 .btn-submit {
   width: 20%;
   height: 60px;
-  
+  border: none;
   background-color: #8D232F;
   margin-top: 4.5vw;
   color: #fff !important;
