--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -51,39 +51,13 @@
             <a href="" class="sns"><span class="fa-facebook-square"></span></a>
             <nav class="footerNav">
                 <ul class="menu">
-                    <li class="menu__item">
-                        <a href="#">メルマガ登録</a>
-                    </li>
-                    <li class="menu__item">
-                        <a href="">サイズガイド</a>
-                    </li>
-
-                    <li class="menu__item">
-                        <a href="#">よくある質問</a>
-                    </li>
-                    <li class="menu__item">
-                        <a href="#">初めてのお客様</a>
-                    </li>
-
-                    <li class="menu__item">
-                        <a href="#">お問い合わせ</a>
-                    </li>
-                    <li class="menu__item">
-                        <a href="#">プラバシーポリシー</a>
-                    </li>
-                    <li class="menu__item">
-                        <a href="#">ヘルプ</a>
-                    </li>
-                    <li class="menu__item">
-                        <a href="#">利用規約</a>
-                    </li>
-                    <li class="menu__item">
-                        <a href="#">特許商取引法</a>
-                    </li>
-                    <li class="menu__item">
-                        <a href="#">会社概要</a>
-                    </li>
+                {% for link in linklists.footer.links %}
+                     <li class="menu__item">
+                        <a href="{{ link.url }}">{{link.title}}</a>
+                     </li>
+                {% endfor %}
                 </ul>
+
             </nav>
 
             <p class="copyright">
