ご予約、料金の　リンク設定

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -11,7 +11,7 @@
 
             <nav class="globalNav--sp">
                 <h2 class="siteLogo">
-                    <a href="">
+                    <a href="{{ pages.reserve.link }}">
                         <img
                             src="{{ 'siteLogo-sp.png' | asset_img_url: '1200x'}}"
                             alt="津カントリー倶楽部"
@@ -28,7 +28,7 @@
                         ></a
                     >
                     <p class="access__btn--menu">
-                        <a href="">ご予約 / 料金</a>
+                        <a href="{{ pages.reserve.link }}">ご予約 / 料金</a>
                     </p>
                 </div>
 
@@ -40,7 +40,7 @@
                 {% endfor %}
                 </ul>
 
-                <a href="#" class="btn btn--l">ご予約 / 料金</a>
+                <a href="{{ pages.reserve.link }}" class="btn btn--l">ご予約 / 料金</a>
                 <a href="" class="sns sns--menu"
                     ><span class="fa-facebook-square"></span
                 ></a>
@@ -79,7 +79,7 @@
                      </li>
                 {% endfor %}
                     <li class="menu__item--box">
-                        <a href="">ご予約 / 料金 </a>
+                        <a href="{{ pages.reserve.link }}">ご予約 / 料金 </a>
                     </li>
                 </ul>
             </nav>
@@ -114,7 +114,7 @@
                         ></a
                     >
                     <p class="access__btn--menu">
-                        <a href="">ご予約 / 料金</a>
+                        <a href="{{ pages.reserve.link }}">ご予約 / 料金</a>
                     </p>
                 </div>
 
@@ -126,7 +126,7 @@
                 {% endfor %}
                 </ul>
 
-                <a href="#" class="btn btn--l">ご予約 / 料金</a>
+                <a href="{{ pages.reserve.link }}" class="btn btn--l">ご予約 / 料金</a>
                 <a href="" class="sns sns--menu"
                     ><span class="fa-facebook-square"></span
                 ></a>
