ハンバーガーメニューhomeリンク挿入

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -11,7 +11,7 @@
 
             <nav class="globalNav--sp">
                 <h2 class="siteLogo">
-                    <a href="{{ pages.reserve.url }}">
+                    <a href="{{ shop.url }}">
                         <img
                             src="{{ 'siteLogo-sp.png' | asset_img_url: '1200x'}}"
                             alt="津カントリー倶楽部"
