header_homeのリンク挿入

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -95,7 +95,7 @@
 
             <nav class="globalNav--sp">
                 <h2 class="siteLogo">
-                    <a href="">
+                    <a href="{{ shop.url }}">
                         <img
                             src="{{'siteLogo-sp.png' | asset_img_url: '2000x'}}"
                             
