--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -1,5 +1,5 @@
             <div class="reservationBtn">
-            <a href="{{page.reserve.url}}">ご予約</a>
+            <a href="{{pages.reserve.url}}">ご予約</a>
         </div>
         <main class="main">
             <section class="about">
