--- a/templates/blog.liquid
+++ b/templates/blog.liquid
@@ -6,16 +6,25 @@
                     alt="津カントリー倶楽部"
                 />
             </p>
+
+            {% if blog.handle == 'event' %}
+
             <h2 class="pageTtl__en">EVENT INFO</h2>
             <h1 class="pageTtl__ja">イベント情報</h1>
+            {% else %}
+            <h2 class="pageTtl__en">INFOMATION</h2>
+            <h1 class="pageTtl__ja">ご案内</h1>
+            {% endif %}
+
 
             <div class="postsWrap">
                 <ul class="posts">
+                    {% for article in blog.articles %}
                     <li class="posts__item">
-                        <a href="" class="post">
+                        <a href="{article.url}" class="post">
                             <figure class="post__figure">
                                 <img
-                                    src="{{'loge-villa.jpg' | asset_img_url : '2000x'}}"
+                                    src="{{article.image.src | img_url : '2000x'}}"
                                     width="538"
                                     height="282"
                                     alt="津カントリー倶楽部　イベント情報"
@@ -24,143 +33,19 @@
                             </figure>
                             <div class="post__body">
                                 <time class="post__date" datetime="2021-00-00"
-                                    >21/00/00<span class="post__week"
-                                        >MON</span
+                                    >{{article.published_at | date: " %y/%m/%d "}}<span class="post__week"
+                                        >{{article.published_at | date: " %a "}}</span
                                     ></time
                                 >
                                 <p class="post__excerpt">
-                                    ここにテキストここにテキストここにテキストここにテキストここに
-                                    テキストここにテキストここにテキストここに
+                                    {{article.content | strip_html | truncate: 30, '...'}}
                                 </p>
                                 <p class="post__link2">View more　</p>
                             </div>
                         </a>
                     </li>
-                    <li class="posts__item">
-                        <a href="" class="post">
-                            <figure class="post__figure">
-                                <img
-                                    src="{{'loge-villa.jpg' | asset_img_url : '2000x'}}"
-                                    width="538"
-                                    height="282"
-                                    alt="津カントリー倶楽部　イベント情報"
-                                    class="post__img"
-                                />
-                            </figure>
-                            <div class="post__body">
-                                <time class="post__date" datetime="2021-00-00"
-                                    >21/00/00<span class="post__week"
-                                        >MON</span
-                                    ></time
-                                >
-                                <p class="post__excerpt">
-                                    ここにテキストここにテキストここにテキストここにテキストここに
-                                    テキストここにテキストここにテキストここに
-                                </p>
-                                <p class="post__link2">View more　</p>
-                            </div>
-                        </a>
-                    </li>
-                    <li class="posts__item">
-                        <a href="" class="post">
-                            <figure class="post__figure">
-                                <img
-                                    src="{{'loge-villa.jpg' | asset_img_url : '2000x'}}"
-                                    width="538"
-                                    height="282"
-                                    alt="津カントリー倶楽部　イベント情報"
-                                    class="post__img"
-                                />
-                            </figure>
-                            <div class="post__body">
-                                <time class="post__date" datetime="2021-00-00"
-                                    >21/00/00<span class="post__week"
-                                        >MON</span
-                                    ></time
-                                >
-                                <p class="post__excerpt">
-                                    ここにテキストここにテキストここにテキストここにテキストここに
-                                    テキストここにテキストここにテキストここに
-                                </p>
-                                <p class="post__link2">View more　</p>
-                            </div>
-                        </a>
-                    </li>
-                    <li class="posts__item">
-                        <a href="" class="post">
-                            <figure class="post__figure">
-                                <img
-                                    src="{{'loge-villa.jpg' | asset_img_url : '2000x'}}"
-                                    width="538"
-                                    height="282"
-                                    alt="津カントリー倶楽部　イベント情報"
-                                    class="post__img"
-                                />
-                            </figure>
-                            <div class="post__body">
-                                <time class="post__date" datetime="2021-00-00"
-                                    >21/00/00<span class="post__week"
-                                        >MON</span
-                                    ></time
-                                >
-                                <p class="post__excerpt">
-                                    ここにテキストここにテキストここにテキストここにテキストここに
-                                    テキストここにテキストここにテキストここに
-                                </p>
-                                <p class="post__link2">View more　</p>
-                            </div>
-                        </a>
-                    </li>
-                    <li class="posts__item">
-                        <a href="" class="post">
-                            <figure class="post__figure">
-                                <img
-                                    src="{{'loge-villa.jpg' | asset_img_url : '2000x'}}"
-                                    width="538"
-                                    height="282"
-                                    alt="津カントリー倶楽部　イベント情報"
-                                    class="post__img"
-                                />
-                            </figure>
-                            <div class="post__body">
-                                <time class="post__date" datetime="2021-00-00"
-                                    >21/00/00<span class="post__week"
-                                        >MON</span
-                                    ></time
-                                >
-                                <p class="post__excerpt">
-                                    ここにテキストここにテキストここにテキストここにテキストここに
-                                    テキストここにテキストここにテキストここに
-                                </p>
-                                <p class="post__link2">View more　</p>
-                            </div>
-                        </a>
-                    </li>
-                    <li class="posts__item">
-                        <a href="" class="post">
-                            <figure class="post__figure">
-                                <img
-                                    src="{{'loge-villa.jpg' | asset_img_url : '2000x'}}"
-                                    width="538"
-                                    height="282"
-                                    alt="津カントリー倶楽部　イベント情報"
-                                    class="post__img"
-                                />
-                            </figure>
-                            <div class="post__body">
-                                <time class="post__date" datetime="2021-00-00"
-                                    >21/00/00<span class="post__week"
-                                        >MON</span
-                                    ></time
-                                >
-                                <p class="post__excerpt">
-                                    ここにテキストここにテキストここにテキストここにテキストここに
-                                    テキストここにテキストここにテキストここに
-                                </p>
-                                <p class="post__link2">View more　</p>
-                            </div>
-                        </a>
-                    </li>
+                    {% endfor %}
+
                 </ul>
             </div>
             <a href="index.html" class="btn posts__btn">TOPページ</a>
