TOPページCMS反映

--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -160,7 +160,7 @@
                      {% for article in blogs['event'].articles %}
                         <li class="cards__item">
                             <a href="{{article.url}}" class="card">
-                                <p class="{{article.title}}">「瀬戸内国際芸術祭」。</p>
+                                <p class="card__ttl">{{article.title}}</p>
                                 <figure class="card__figure">
                                     <img
                                         class="card__img"
