--- a/templates/article.liquid
+++ b/templates/article.liquid
@@ -19,60 +19,24 @@
             <section class="eventInfo guidanceInfo">
                 <div class="eventInfo__inner">
                     <ul class="cards">
+                     {% for article in blogs['event'].articles %}
                         <li class="cards__item">
-                            <a href="" class="card">
-                                <p class="card__ttl">「瀬戸内国際芸術祭」。</p>
+                            <a href="{{article.url}}" class="card">
+                                <p class="card__ttl">{{article.title}}</p>
                                 <figure class="card__figure">
                                     <img
                                         class="card__img"
-                                        src="{{'loge-villa.jpg' | asset_img_url: '2000x'}}"
+                                        src="{{article.image.src | img_url : '2000x'}}"
                                         alt="津カントリー倶楽部　イベント情報"
                                     />
                                 </figure>
                                 <p class="card__link">View more</p>
                             </a>
                         </li>
-                        <li class="cards__item">
-                            <a href="" class="card">
-                                <p class="card__ttl">「瀬戸内国際芸術祭」。</p>
-                                <figure class="card__figure">
-                                    <img
-                                        class="card__img"
-                                        src="{{'loge-villa.jpg' | asset_img_url: '2000x'}}"
-                                        alt="津カントリー倶楽部　イベント情報"
-                                    />
-                                </figure>
-                                <p class="card__link">View more</p>
-                            </a>
-                        </li>
-                        <li class="cards__item">
-                            <a href="" class="card">
-                                <p class="card__ttl">「瀬戸内国際芸術祭」。</p>
-                                <figure class="card__figure">
-                                    <img
-                                        class="card__img"
-                                        src="{{'loge-villa.jpg' | asset_img_url: '2000x'}}"
-                                        alt="津カントリー倶楽部　イベント情報"
-                                    />
-                                </figure>
-                                <p class="card__link">View more</p>
-                            </a>
-                        </li>
-                        <li class="cards__item">
-                            <a href="" class="card card__item4">
-                                <p class="card__ttl">「瀬戸内国際芸術祭」。</p>
-                                <figure class="card__figure">
-                                    <img
-                                        class="card__img"
-                                        src="./assets/images/TOP/loge-villa.jpg"
-                                        alt="津カントリー倶楽部　イベント情報"
-                                    />
-                                </figure>
-                                <p class="card__link">View more</p>
-                            </a>
-                        </li>
+                        {% endfor %}
+
                     </ul>
-                    <a href="#" class="btn eventInfo__btn guidance__btn--pc"
+                    <a href="{{blogs.event.url}}" class="btn eventInfo__btn guidance__btn--pc"
                         >イベント情報一覧</a
                     >
                 </div>
