TOPページCMS反映

--- a/templates/article.liquid
+++ b/templates/article.liquid
@@ -26,7 +26,7 @@
                                 <figure class="card__figure">
                                     <img
                                         class="card__img"
-                                        src="{{article.image.src | img_url : '2000px'}}"
+                                        src="{{article.image.src | img_url : '2000x'}}"
                                         alt="津カントリー倶楽部　イベント情報"
                                     />
                                 </figure>
