TOPページCMS反映

--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -199,7 +199,7 @@
                         ></a
                     >
                 </address>
-                <p class="access__btn">ご予約 / 料金</p>
+                <a href = "{{page.reserve.url}}"class="access__btn">ご予約 / 料金</a>
                 <div class="mapWrap">
                     <iframe
                         class="map1"
