ページ下部のリンクを全て設定

--- a/templates/article.liquid
+++ b/templates/article.liquid
@@ -41,8 +41,8 @@
                     >
                 </div>
             </section>
-            <a href="event-info.html" class="btn guidance__btn1"
+            <a href="{{blogs.event.url}}" class="btn guidance__btn1"
                 >イベント情報一覧</a
             >
-            <a href="index.html" class="btn guidance__btn2">TOPページ</a>
+            <a href="{{shop.url}}" class="btn guidance__btn2">TOPページ</a>
         </main>
