--- a/templates/blog.liquid
+++ b/templates/blog.liquid
@@ -48,6 +48,6 @@
 
                 </ul>
             </div>
-            <a href="index.html" class="btn posts__btn">TOPページ</a>
+            <a href="{{shop.url}}" class="btn posts__btn">TOPページ</a>
         </main>
 
