--- a/templates/page.facilites.liquid
+++ b/templates/page.facilites.liquid
@@ -236,6 +236,6 @@
                 </ul>
             </section>
 
-            <a href="" class="btn facilities__btn">コースガイドはこちら</a>
+            <a href="{{pages.course.url}}" class="btn facilities__btn">コースガイドはこちら</a>
         </main>
 
