--- a/templates/page.reserve-price.liquid
+++ b/templates/page.reserve-price.liquid
@@ -319,8 +319,8 @@
                 <p class="table__note">ネット予約：</p>
             </div>
             <div class="res-price__btn--wrap">
-                <a href="" class="btn res-price__btn1">コースガイドはこちら</a>
-                <a href="" class="btn res-price__btn2">施設案内はこちら</a>
+                <a href="{{pages.course.url}}" class="btn res-price__btn1">コースガイドはこちら</a>
+                <a href="{{pages.facility.url}}" class="btn res-price__btn2">施設案内はこちら</a>
             </div>
             <p class="member"><a href="">マイページ</a></p>
             <p class="member"><a href="">テキストテキスト</a></p>
