--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -117,7 +117,7 @@
                         レンガに囲まれた大きな池など、<br />
                         戦略的で魅力的なコースがお待ちしています。
                     </p>
-                    <a href="#" class="media__btn">詳細はこちら</a>
+                    <a href="{{pages.course.url}}" class="media__btn">詳細はこちら</a>
                 </div>
             </article>
             <article class="media media__reverse">
@@ -146,7 +146,7 @@
                         ゴルフを楽しんだ後は、<br />
                         ゴルフ場を眺めながらのんびりと時を過ごせます。
                     </p>
-                    <a href="#" class="media__btn">詳細はこちら</a>
+                    <a href="{{pages.facility.url}}" class="media__btn">詳細はこちら</a>
                 </div>
             </article>
 
