--- a/templates/page.course.liquid
+++ b/templates/page.course.liquid
@@ -548,7 +548,7 @@
                 </table>
             </section>
             <div class="res-price__btn--wrap">
-                <a href="" class="btn res-price__btn1">ご予約/料金はこちら</a>
-                <a href="" class="btn res-price__btn2">施設案内はこちら</a>
+                <a href="{{pages.reserve.url}}" class="btn res-price__btn1">ご予約/料金はこちら</a>
+                <a href="{{pages.facility.url}}" class="btn res-price__btn2">施設案内はこちら</a>
             </div>
         </main>
