コース画像の追加

--- a/templates/page.course.liquid
+++ b/templates/page.course.liquid
@@ -36,7 +36,7 @@
                     <figure class="hole__img">
                         <p class="hole__text--s">Par:4 HDCP:11</p>
                         <img
-                            src="{{ 'hole-1.jpg' | asset_img_url: '3000x'}}"
+                            src="{{ '1.jpg' | asset_img_url: '3000x'}}"
                             width="222"
                             height="402"
                             alt="津カントリー倶楽部　1番ホール"
@@ -52,7 +52,7 @@
                         <p class="hole__text--s">Par:3 HDCP:17</p>
 
                         <img
-                            src="{{ 'hole-2.jpg' | asset_img_url: '3000x'}}"
+                            src="{{ '2.jpg' | asset_img_url: '3000x'}}"
                             width="222"
                             height="402"
                             alt="津カントリー倶楽部　2番ホール"
@@ -69,7 +69,7 @@
 
                         <img
                             
-                            src="{{ 'hole-3.jpg' | asset_img_url: '3000x'}}"
+                            src="{{ '3.jpg' | asset_img_url: '3000x'}}"
                             width="222"
                             height="402"
                             alt="津カントリー倶楽部　3番ホール"
@@ -85,7 +85,7 @@
                         <p class="hole__text--s">Par:4 HDCP:11</p>
 
                         <img
-                            src="{{ 'hole-4.jpg' | asset_img_url: '3000x'}}"
+                            src="{{ '4.jpg' | asset_img_url: '3000x'}}"
                             width="222"
                             height="402"
                             alt="津カントリー倶楽部　4番ホール"
@@ -101,7 +101,7 @@
                         <p class="hole__text--s">Par:4 HDCP:11</p>
 
                         <img
-                            src="{{ 'hole-4.jpg' | asset_img_url: '3000x'}}"
+                            src="{{ '5.jpg' | asset_img_url: '3000x'}}"
                             width="222"
                             height="402"
                             alt="津カントリー倶楽部　5番ホール"
@@ -117,7 +117,7 @@
                         <p class="hole__text--s">Par:4 HDCP:11</p>
 
                         <img
-                            src="{{ 'hole-4.jpg' | asset_img_url: '3000x'}}"
+                            src="{{ '6.jpg' | asset_img_url: '3000x'}}"
                             width="222"
                             height="402"
                             alt="津カントリー倶楽部　6番ホール"
@@ -133,7 +133,7 @@
                         <p class="hole__text--s">Par:4 HDCP:11</p>
 
                         <img
-                            src="{{ 'hole-4.jpg' | asset_img_url: '3000x'}}"
+                            src="{{ '7.jpg' | asset_img_url: '3000x'}}"
                             width="222"
                             height="402"
                             alt="津カントリー倶楽部　7番ホール"
@@ -149,7 +149,7 @@
                         <p class="hole__text--s">Par:4 HDCP:11</p>
 
                         <img
-                            src="{{ 'hole-4.jpg' | asset_img_url: '3000x'}}"
+                            src="{{ '8.jpg' | asset_img_url: '3000x'}}"
                             width="222"
                             height="402"
                             alt="津カントリー倶楽部　8番ホール"
@@ -165,7 +165,7 @@
                         <p class="hole__text--s">Par:4 HDCP:11</p>
 
                         <img
-                            src="{{ 'hole-4.jpg' | asset_img_url: '3000x'}}"
+                            src="{{ '9.jpg' | asset_img_url: '3000x'}}"
                             width="222"
                             height="402"
                             alt="津カントリー倶楽部　9番ホール"
@@ -181,7 +181,7 @@
                         <p class="hole__text--s">Par:4 HDCP:11</p>
 
                         <img
-                            src="{{ 'hole-4.jpg' | asset_img_url: '3000x'}}"
+                            src="{{ '10.jpg' | asset_img_url: '3000x'}}"
                             width="222"
                             height="402"
                             alt="津カントリー倶楽部　10番ホール"
@@ -197,7 +197,7 @@
                         <p class="hole__text--s">Par:4 HDCP:11</p>
 
                         <img
-                            src="{{ 'hole-4.jpg' | asset_img_url: '3000x'}}"
+                            src="{{ '11.jpg' | asset_img_url: '3000x'}}"
                             width="222"
                             height="402"
                             alt="津カントリー倶楽部　11番ホール"
@@ -213,7 +213,7 @@
                         <p class="hole__text--s">Par:4 HDCP:11</p>
 
                         <img
-                            src="{{ 'hole-4.jpg' | asset_img_url: '3000x'}}"
+                            src="{{ '12.jpg' | asset_img_url: '3000x'}}"
                             width="222"
                             height="402"
                             alt="津カントリー倶楽部　12番ホール"
@@ -229,7 +229,7 @@
                         <p class="hole__text--s">Par:4 HDCP:11</p>
 
                         <img
-                            src="{{ 'hole-4.jpg' | asset_img_url: '3000x'}}"
+                            src="{{ '13.jpg' | asset_img_url: '3000x'}}"
                             width="222"
                             height="402"
                             alt="津カントリー倶楽部　13番ホール"
@@ -245,7 +245,7 @@
                         <p class="hole__text--s">Par:4 HDCP:11</p>
 
                         <img
-                            src="{{ 'hole-4.jpg' | asset_img_url: '3000x'}}"
+                            src="{{ '14.jpg' | asset_img_url: '3000x'}}"
                             width="222"
                             height="402"
                             alt="津カントリー倶楽部　14番ホール"
@@ -261,7 +261,7 @@
                         <p class="hole__text--s">Par:4 HDCP:11</p>
 
                         <img
-                            src="{{ 'hole-4.jpg' | asset_img_url: '3000x'}}"
+                            src="{{ '15.jpg' | asset_img_url: '3000x'}}"
                             width="222"
                             height="402"
                             alt="津カントリー倶楽部　15番ホール"
@@ -277,7 +277,7 @@
                         <p class="hole__text--s">Par:4 HDCP:11</p>
 
                         <img
-                            src="{{ 'hole-4.jpg' | asset_img_url: '3000x'}}"
+                            src="{{ '16.jpg' | asset_img_url: '3000x'}}"
                             width="222"
                             height="402"
                             alt="津カントリー倶楽部　16番ホール"
@@ -293,7 +293,7 @@
                         <p class="hole__text--s">Par:4 HDCP:11</p>
 
                         <img
-                            src="{{ 'hole-4.jpg' | asset_img_url: '3000x'}}"
+                            src="{{ '17.jpg' | asset_img_url: '3000x'}}"
                             width="222"
                             height="402"
                             alt="津カントリー倶楽部　17番ホール"
@@ -309,7 +309,7 @@
                         <p class="hole__text--s">Par:4 HDCP:11</p>
 
                         <img
-                            src="{{ 'hole-4.jpg' | asset_img_url: '3000x'}}"
+                            src="{{ '18.jpg' | asset_img_url: '3000x'}}"
                             width="222"
                             height="402"
                             alt="津カントリー倶楽部　18番ホール"
