--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -64,14 +64,14 @@
               <input type="hidden" id="variant-id" name="id" value={{product.variants.first.id}}>
 
               
-              {%- if variant.inventory_quantity  > 0 -%}
+              {% comment %} {%- if variant.inventory_quantity  > 0 -%} {% endcomment %}
               	<button type="submit" class="Btn02 bgleft02" name="add" id="AddToCart" ><span>カートに入れる</span></button>
-              	{%- if variant.inventory_quantity  < 10 -%}
-              		<span style="color:red;">残り在庫 {{ variant.inventory_quantity }} 個です</span>
-              	{%- endif -%}
-              {%- else -%}
+              	{% comment %} {%- if variant.inventory_quantity  < 10 -%} {% endcomment %}
+              		{% comment %} <span style="color:red;">残り在庫 {{ variant.inventory_quantity }} 個です</span> {% endcomment %}
+              	{% comment %} {%- endif -%} {% endcomment %}
+              {% comment %} {%- else -%} {% endcomment %}
 
-              <div class="Btn02"><span>在庫なし</span></div>
+              {% comment %} <div class="Btn02"><span>在庫なし</span></div> {% endcomment %}
               
               {%- endif -%}
               
