カートの配送日時指定を非表示に

--- a/templates/cart.liquid
+++ b/templates/cart.liquid
@@ -30,7 +30,7 @@
                     合計金額 {{cart.total_price | money}}(税込)
                 </div>
               
-              {% render"cart-attributes-os1"%}
+              {% comment %} {% render"cart-attributes-os1"%} {% endcomment %}
 
 <!--
                 <div class="cart_btn_box">
