ヘッダーのロゴにリンク先を指定

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -138,12 +138,12 @@
                 </p>
             </nav>
             <nav class="globalNav-2">
-                <p class="pageLogo-pc">
+                <a href="{{shop.url}}" class="pageLogo-pc">
                     <img
                         src="{{'pageLogo-pc.png' | asset_img_url: '2000x' }}"
                         alt="津カントリー倶楽部"
                     />
-                </p>
+                </a>
                
 
                 <ul class="menu">
