神社のコンテンツを追加

--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -150,6 +150,46 @@
                 </div>
             </article>
 
+                        <article class="media">
+                <figure class="media__img">
+                    <img
+                        src="{{ 'golf-originalCourse-pc.jpg' | asset_img_url: '3000x'}}"
+                        width="513"
+                        height="311"
+                        alt="戦略性に富むオリジナルコース"
+                        class="media__img--pc"
+                    />
+                    <img
+                        src="{{ 'golf-originalCourse-sp.jpg' | asset_img_url: '3000x'}}"
+                        width="513"
+                        height="311"
+                        alt="戦略性に富むオリジナルコース"
+                        class="media__img--sp"
+                    />
+                </figure>
+                <div
+                    class="media__body js-rellax"
+                    data-rellax-speed="3"
+                    data-rellax-percentage="0.5"
+                >
+                    <p class="media__num section__num">03.</p>
+                    <h3 class="media__ttl">
+                        神社の見出し神社の見出し神社の見出し<br />
+                        神社の見出し神社の見出し神社の見出し神社の見出し神社の見出し
+                        
+                    </h3>
+                    <p class="media__text">
+                        神社コンテンツ<br />
+                        神社コンテンツ神社コンテンツ神社コンテンツ<br />
+                        神社コンテンツ神社コンテンツ神社コンテンツ神社コンテンツbr />
+                        神社コンテンツ<br />
+                        神社コンテンツ神社コンテンツ神社コンテンツ<br />
+                        神社コンテンツ神社コンテンツ神社コンテンツ神社コンテンツ
+                    </p>
+                    <a href="" class="media__btn">詳細はこちら</a>
+                </div>
+            </article>
+
             <section class="eventInfo">
                 <div class="eventInfo__inner">
                     <p class="eventInfo__num section__num">04</p>
