神社のコンテンツを追加

--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -181,7 +181,7 @@
                     <p class="media__text">
                         神社コンテンツ<br />
                         神社コンテンツ神社コンテンツ神社コンテンツ<br />
-                        神社コンテンツ神社コンテンツ神社コンテンツ神社コンテンツbr />
+                        神社コンテンツ神社コンテンツ神社コンテンツ神社コンテンツ<br />
                         神社コンテンツ<br />
                         神社コンテンツ神社コンテンツ神社コンテンツ<br />
                         神社コンテンツ神社コンテンツ神社コンテンツ神社コンテンツ
