神社のコンテンツを追加

--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -174,17 +174,18 @@
                 >
                     <p class="media__num section__num">03.</p>
                     <h3 class="media__ttl">
-                        神社の見出し神社の見出し神社の見出し<br />
-                        神社の見出し神社の見出し神社の見出し神社の見出し神社の見出し
+                        地域を守ってくれている神様<br />
+                        椿大神社との繋がり
                         
                     </h3>
                     <p class="media__text">
-                        神社コンテンツ<br />
-                        神社コンテンツ神社コンテンツ神社コンテンツ<br />
-                        神社コンテンツ神社コンテンツ神社コンテンツ神社コンテンツ<br />
-                        神社コンテンツ<br />
-                        神社コンテンツ神社コンテンツ神社コンテンツ<br />
-                        神社コンテンツ神社コンテンツ神社コンテンツ神社コンテンツ
+                        津カントリーク倶楽部の近隣には二千年の歴史を持つ日本最古の神社である<br />
+                        椿大神社があります。<br />
+                        深い竹林の向こうにある椿大神社は、津カントリー倶楽部のクラブハウスの<br />
+                        真正面方向に位置します。<br />
+                        椿大神社にも大黒様がいらっしゃいます。<br />
+                        椿大神社はゴルフ場全てを見渡す場所にあるので、<br />
+                        毎日私たちのプレーを見守ってくれています。
                     </p>
                     <a href="" class="media__btn">詳細はこちら</a>
                 </div>
