神社の誤字、改行修正

--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -182,7 +182,7 @@
                         津カントリー倶楽部の近隣には二千年の歴史を持つ<br />
                         日本最古の神社である椿大神社があります。<br />
                         深い竹林の向こうにある椿大神社は、<br />
-                        津カントリー倶楽部のクラブハウスの真正面方向に位置します。<br />
+                        津カントリー倶楽部のクラブハウス真正面方向に位置します。<br />
                         椿大神社にも大黒様がいらっしゃいます。<br />
                         椿大神社はゴルフ場全てを見渡す場所にあるので、<br />
                         毎日私たちのプレーを見守ってくれています。
